# some

./: README.md  files_test.py  pyproject.toml
config/: settings.py
core/: models.py
core/migrations/: 0001_initial.py
