[tool.poetry]
name = "hillel_social"
version = "0.1.0"
description = "My site"
authors = ["Mikhail_Voloshin"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
